# 2024-02-TPI

./: .env  README.md  ejers.go  go.mod  hola_test.go  main.go  package.json  pyproject.toml
.github/workflows/: check.yaml  general.yaml
backoffice/: .env.production  Justfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backoffice/src/: App.tsx  index.css  (+1 more)
client/: package.json  pnpm-lock.yaml
cliente_next/: package.json  pnpm-lock.yaml
landing/: .env.production  .gitignore  Justfile  astro.config.mjs  package.json  pnpm-lock.yaml  pwa-assets.config.ts  tsconfig.json  vite.config.js
scripts/: iniciar_db.sh
server/: .gitignore  Dockerfile  Justfile  README.md  compose.yaml  inicializacion_db.py  log.txt  pyproject.toml  requirements.txt
server/src/: .env.development  .env.production  Justfile  db.sqlite3  gunicorn.conf.py  manage.py
server/src/app/: admin.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
server/src/app/migrations/: 0001_initial.py  0002_delete_adminsistema.py  0002_rename_adm_sistemas_adminsistema.py  0002_user.py  0003_escultura_escultor_id.py  0003_rename_user_usercustom.py  0004_alter_usercustom_username.py  0004_pais_iso.py  0005_alter_usercustom_username.py  0005_escultor_fecha_nacimiento.py  0006_adm_sistemas_escultor_escultorevento_escultura_and_more.py  0006_escultor_apellido_alter_escultor_nombre.py  0007_alter_escultura_fecha_creacion.py  0007_delete_usercustom.py  0008_alter_escultura_fecha_creacion.py  0008_alter_visitante_correo.py  0009_remove_imagen_fecha_imagen_escultura_id_and_more.py  0010_rename_visitante_votante_and_more.py
server/src/app/tests/: test_views.py
server/src/app/views/: email.html  health_check.py  sets.py  validar_votante.py  verify_captcha.py  votacion.py
server/src/backend/: celery.py  settings.py  urls.py
server/src/backend/settings/: __init__.py  base.py  development.py  production.py  testing.py
server/src/scripts/: cargar_info.py  cargar_superuser.py  inicializacion_db.py  iniciar_db.py  insert_data.sql  insert_data_real.sql  insert_superuser.sql
server/src/scripts/generadoresData/: data_escultorEvento.py  data_escultores.py  data_esculturas.py  data_evento.py  data_imagen.py  data_lugar.py  data_tematica.py  data_votante.py  paises.sql  urls_imagenes.py
src/: .coverage  Justfile  db.sqlite3
tp_nivelador/: .env  database.db  db_connections_test.go  go.mod  go.sum  main.go
(+152 files in other folders)
