[project]
name = "desarrollo"
version = "0.1.0"
description = "Trabajo Práctico Final de Desarrollo de Software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "markdown>=3.7",
    "djangorestframework>=3.15.2",
    "coverage>=7.6.1",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
