[project]
name = "desarrollo"
version = "0.1.0"
description = "Trabajo Práctico Final de Desarrollo de Software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "markdown>=3.7",
    "djangorestframework>=3.15.2",
    "coverage>=7.6.1",
    "pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    "python-json-logger>=2.0.7",
    "requests>=2.32.3",
    "django-cors-headers>=4.5.0",
    "pillow>=11.0.0",
    "gunicorn>=23.0.0",
    "docutils>=0.21.2",
    "whitenoise>=6.8.2",
    "django-filter>=24.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
